# Ariadne

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: feishu-message.md
nginx/conf.d/: freshrss.conf
sql/: 001_schema.sql
src/ariadne/: analysis.py  api.py  config.py  db.py  freshrss_api.py  jobs.py  rss.py  sample.py  smoke.py  text.py  worker.py
tests/: test_analysis.py  test_api.py  test_config.py  test_freshrss_api.py  test_push_format.py  test_rss.py  test_sample.py  test_text.py  test_worker.py
