[project]
name = "ariadne"
version = "0.1.0"
description = "Personal information-flow processing system."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
